Fixed supporters list on about, "you" link and clan badges on mobile

--- a/public/themes/mirror.less
+++ b/public/themes/mirror.less
@@ -271,7 +271,7 @@ nav.ssr-page-container {
             & {
                 height: unset !important;
 
-                .clan-badges {
+                .player .clan-badges {
                     display: none;
                 }
             }
